# lianghua

./: .gitattributes  .gitignore  .vercelignore  AGENTS.md  MODEL_OPERATING_SYSTEM.md  README.md  analyze_factor_selection_alpha.py  analyze_momentum_breadth_regime.py  analyze_multifactor_failure_fold.py  analyze_personal_trades.py  analyze_trend_ignition_lifelines.py  app.py  apply_personal_trade_overlay.py  audit_legacy_10000pct_reproduction.py  audit_next_open_factors.py  build_daily_personal_overlay_report.py  build_data_panel.py  build_high_return_universe.py  build_panel_from_stock_history.py  build_research_database.py  build_shadow_account_review.py  build_strategy_arena_report.py  build_trend_ignition_training_set.py  czsc_structure_shadow.py  daily_run_card.py  early_pattern_watchlist.py  evaluate_early_pattern_forward_returns.py  evaluate_strategy_family_forward_returns.py  evaluate_trend_ignition_score_forward_returns.py  execution_rules.py  export_marketlens_model3_feed.py  export_research_snapshot.py  generate_rank_model_candidates.py  generate_strong_pullback_candidates.py  index.html  institutional_accumulation_shadow.py  legacy_observation_factors.py  main_net_volume_shadow.py  merged_daily_outputs.py  migrate_tdx_history.py  (+54 more)
.github/: dependabot.yml
api/: index.py
configs/: README.md  ashare_main_board_thsdk_robust.yaml  ashare_main_board_thsdk_robust_sample80.yaml  ashare_main_chinext_multifactor_reversal.yaml  ashare_main_chinext_multifactor_reversal_sample120.yaml  ashare_main_chinext_multifactor_satellite.yaml  ashare_main_chinext_thsdk_robust.yaml  (+199 more)
(+345 files in other folders)
